add user and tenant logic
